scripts/nullaway/annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8.txt
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/evolution/candidates/EvolutionCandidate.java:32: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return classTypeDef;
		^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/evolution/candidates/EvolutionCandidate.java:40: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return obj;
		^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/evolution/problems/ProblemSet.java:18: error: [NullAway] initializer method does not guarantee @NonNull field map (line 13) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public ProblemSet(List<P> problems, List<S> solutions){
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/evolution/problems/ProblemSet.java:31: error: [NullAway] dereferenced expression map.get(problem) is @Nullable
		boolean rv = map.get(problem).equals(solution);
		                             ^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/dfa/DeterministicFiniteAutomaton.java:26: error: [NullAway] initializer method does not guarantee @NonNull fields states (line 19), acceptingStates (line 21), alphabet (line 22) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DeterministicFiniteAutomaton(){
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/dfa/DeterministicFiniteAutomaton.java:55: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return startState;
		^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/dfa/DeterministicFiniteAutomaton.java:107: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return current;
		^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/dfa/DeterministicFiniteAutomaton.java:159: error: [NullAway] dereferenced expression getStateRef(states, s) is @Nullable
			getStateRef(states, s).setTransitionTable(tt);
			                      ^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/dfa/State.java:14: error: [NullAway] initializer method does not guarantee @NonNull field tt (line 7) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public State(String id){
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/evolution/initialisation/ConsistentGlobalProblemSetInitialisation.java:78: error: [NullAway] dereferenced expression ea is @Nullable
		return ea.getWinner();
		         ^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/dfa/RandomDeterministicFiniteAutomaton.java:54: error: [NullAway] passing @Nullable parameter 'getStateById("q0")' where @NonNull is required
		setStartState(getStateById("q0"));
		                          ^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/evolution/initialisation/EvolvingGlobalProblemSetInitialisation.java:81: error: [NullAway] dereferenced expression ea is @Nullable
		return ea.getWinner();
		         ^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/evolution/initialisation/RandomSearchInitialisation.java:69: error: [NullAway] dereferenced expression ea is @Nullable
		return ea.getWinner();
		         ^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/evolution/initialisation/EvolvingLocalProblemSetInitialisation.java:80: error: [NullAway] dereferenced expression ea is @Nullable
		return ea.getWinner();
		         ^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/helpers/Logger.java:16: error: [NullAway] assigning @Nullable expression to @NonNull field
	private PrintWriter writer = null;
	                    ^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/dfa/optimisation/UnreachableStateRemover.java:28: error: [NullAway] dereferenced expression current is @Nullable
				next = current.process(c);
				              ^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/dfa/DeterministicFiniteAutomatonTest.java:209: error: [NullAway] passing @Nullable parameter 'q0' where @NonNull is required
		dfa2.changeLink(q0, '0', q3);
		                ^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/dfa/DeterministicFiniteAutomatonTest.java:209: error: [NullAway] passing @Nullable parameter 'q3' where @NonNull is required
		dfa2.changeLink(q0, '0', q3);
		                         ^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/dfa/DeterministicFiniteAutomatonTest.java:222: error: [NullAway] passing @Nullable parameter 'q0' where @NonNull is required
		dfa2.changeLink(q0, '0', q3);
		                ^
    (see http://t.uber.com/nullaway )
../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/dfa/DeterministicFiniteAutomatonTest.java:222: error: [NullAway] passing @Nullable parameter 'q3' where @NonNull is required
		dfa2.changeLink(q0, '0', q3);
		                         ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url835a90ed59_aschi_regularLanguages_tgz-pJ8-ch_zhaw_regularLanguages_evolution_runners_EvolvingLocalDivisable5LanguageJ8/src/ch/zhaw/regularLanguages/helpers/Logger.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
20 errors
